--- a/vm/Cargo.toml
+++ b/vm/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+
+[lints.clippy]
+pedantic = { level = "deny", priority = -1 }
+nursery = { level = "deny", priority = -1 }
+enum_glob_use = { level = "deny", priority = -1 }
+
+missing_panics_doc = "allow"
+missing_errors_doc = "allow"
