--- a/kenc/Cargo.toml
+++ b/kenc/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
-name = "vm"
+name = "kenc"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+thiserror = "2.0.12"
+kenvm = { path = "../kenvm" }
+
+[lints.rust]
+unsafe_code = "forbid"
 
 [lints.clippy]
 pedantic = { level = "deny", priority = -1 }
