--- a/ken/Cargo.toml
+++ b/ken/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-rustyline = "16.0.0"
+clap = { version = "4.5.40", features = ["derive"] }
+codespan-reporting = "0.12.0"
 kenc = { path = "../kenc" }
 kenvm = { path = "../kenvm" }
+kenspan = { path = "../kenspan" }
+reedline = "0.40.0"
+
+[lints]
+workspace = true
