--- a/kenspan/Cargo.toml
+++ b/kenspan/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "kenvm"
+name = "kenspan"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-kenspan = { path = "../kenspan" }
-thiserror = "2.0.12"
 
 [lints]
 workspace = true
