--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ nursery = { level = "deny", priority = -1 }
 enum_glob_use = { level = "deny", priority = -1 }
 missing_panics_doc = "allow"
 missing_errors_doc = "allow"
+too_many_lines = "allow"
