--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 resolver = "3"
 members = ["ken", "kenc", "kenspan", "kenvm"]
 
+[profile.release]
+debug = 2
+# lto = true
+# codegen-units = 1
+
 [workspace.lints.rust]
 unsafe_code = "forbid"
 
