--- a/kenvm/Cargo.toml
+++ b/kenvm/Cargo.toml
@@ -7,5 +7,10 @@ edition = "2024"
 kenspan = { path = "../kenspan" }
 thiserror = "2.0.12"
 
-[lints]
-workspace = true
+[lints.clippy]
+pedantic = { level = "deny", priority = -1 }
+nursery = { level = "deny", priority = -1 }
+enum_glob_use = { level = "deny", priority = -1 }
+missing_panics_doc = "allow"
+missing_errors_doc = "allow"
+too_many_lines = "allow"
